--- a/Embedded/N64/n64Verilog/DE0_Nano_N64_controller/DE0_Nano.qsf
+++ b/Embedded/N64/n64Verilog/DE0_Nano_N64_controller/DE0_Nano.qsf
@@ -125,9 +125,6 @@ set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name VERILOG_FILE N64_controller.v
-set_global_assignment -name VERILOG_FILE async_trap_and_reset.v
-set_global_assignment -name SDC_FILE DE0_Nano.SDC
 set_global_assignment -name DEVICE_FILTER_PACKAGE UFBGA
 set_global_assignment -name DEVICE_FILTER_PIN_COUNT 169
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 8
@@ -135,7 +132,11 @@ set_global_assignment -name FLOW_ENABLE_POWER_ANALYZER ON
 set_global_assignment -name POWER_DEFAULT_INPUT_IO_TOGGLE_RATE "12.5 %"
 
 
+
+
+set_global_assignment -name VHDL_FILE ../../UART/uart_tx.vhd
+set_global_assignment -name VERILOG_FILE N64_controller.v
+set_global_assignment -name VERILOG_FILE async_trap_and_reset.v
+set_global_assignment -name SDC_FILE DE0_Nano.SDC
 set_global_assignment -name QIP_FILE ../PLL.qip
-
-
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
