--- a/Embedded/N64/n64Verilog/DE0_Nano_N64_controller/DE0_Nano.qsf
+++ b/Embedded/N64/n64Verilog/DE0_Nano_N64_controller/DE0_Nano.qsf
@@ -139,4 +139,6 @@ set_global_assignment -name VERILOG_FILE N64_controller.v
 set_global_assignment -name VERILOG_FILE async_trap_and_reset.v
 set_global_assignment -name SDC_FILE DE0_Nano.SDC
 set_global_assignment -name QIP_FILE ../PLL.qip
+set_location_assignment PIN_G12 -to o_uart_tx
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to o_uart_tx
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
